external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-object-expression2.js
var f = async function() { return {g: await} }
